--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="Slide1-1024x683-1.jpg" alt="">
             <div class="content">
                 <h2 class="h2-down">Verbatoria Talents</h2>
-                <p class="fade-in-image">Verbatoria significantly helps in uncovering the natural talents of individuals. Since 2014, our
+                <p class="fade-in-text">Verbatoria significantly helps in uncovering the natural talents of individuals. Since 2014, our
                     certified specialists carry out unique neurofeedback evaluations for children, teenagers, and adults
                     based on seven Talent Quotients (TQ). Evaluations are held by age groups which guarantees an
                     individual
