--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container mainSlider">
         <div class="main-content">
-            <img src="Slide1-1024x683-1.jpg" alt="">
+            <img src="Slide1-1024x683-1_1.webp" alt="">
             <div class="content">
                 <h2 class="h2-down">Verbatoria Talents</h2>
                 <p class="fade-in-text">Verbatoria significantly helps in uncovering the natural talents of individuals. Since 2014, our
