--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
     <title></title>
 </head>
 
@@ -22,7 +22,7 @@
                     approach to the assessment rather than a comparison with the standards as in traditional methods. —-
                     Use
                     the word: guidance, advisement..etc</p>
-                    <button class="button-up">book your appointment</button>
+                    <button class="button-up btn-main">book your appointment</button>
             </div>
         </div>
     </div>
